# AxisLauncher2

./: LICENSE  README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: lib.rs  main.rs
src/app/: app.tsx
src/app/core/: frame.tsx
src/state/: settings.ts
src/styles/: app.css
src/utils/: getPlayers.ts
